--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dell.anew">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+
+        <activity android:name=".FrameActivity"></activity>
+        <activity android:name=".RateCalcActivity" />
+        <activity android:name=".MyList2Activity" />
+        <activity android:name=".MyListActivity" />
+        <activity android:name=".RateListActivity" />
         <activity android:name=".RateActiviy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConfigActivity"></activity>
+        <activity android:name=".ConfigActivity" />
     </application>
 
 </manifest>
